--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -50,6 +50,7 @@
 	padding-bottom: 57.3554933%;
 	position: absolute;
 	width: 100%;
+	z-index: 1;
 }
 
 .intro {
